# endio

./: .gitignore  Cargo.toml
.github/workflows/: docs.yml
endio_derive/: Cargo.toml
endio_derive/src/: deserialize.rs  lib.rs  serialize.rs
src/: deserialize.rs  endian.rs  lib.rs  read.rs  serialize.rs  write.rs
