[package]
name = "endio"
version = "0.3.0"
authors = ["lcdr"]
edition = "2024"
description = "Simple reading & writing of binary data, extensible and ergonomic."
keywords = ["binary", "byte", "serialization", "deserialization", "endian"]
categories = ["encoding", "parsing"]
readme = "README.md"
license = "AGPL-3.0-or-later"
repository = "https://github.com/jadebenn/endio/"

[dependencies]
endio_derive = { path = "endio_derive", optional = true }

[features]
default = ["derive"]
derive = ["endio_derive"]

[lints.clippy]
pedantic = "warn"
